# truenas-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  diagnose_tools.py  pyproject.toml
src/: index.ts
src/truenas_mcp/: __init__.py  compose_converter.py  mcp_server.py  mcp_tools.py  mock_client.py  security_config.py  truenas_client.py  validators.py
tests/: __init__.py  conftest.py  test_compose_converter.py  test_mcp_server.py  test_mcp_tools.py  test_truenas_client.py  test_validators.py
